@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
  <description>EEA Exhibit profile</description>
- <version>6.2</version>
+ <version>8.0</version>
  <dependencies>
   <dependency>profile-eea.app.visualization:default</dependency>
  </dependencies>
